Fix for the `<h3>` in the modal dialog: remove padding, margin and border in order for the toolbar to be displayed correctly in the modal window (without a scrollbar)

--- a/enterprise/theme/src/main/resources/net/geocat/enterprise/geoserver/theme/css/geoserver_enterprise.css
+++ b/enterprise/theme/src/main/resources/net/geocat/enterprise/geoserver/theme/css/geoserver_enterprise.css
@@ -1158,6 +1158,11 @@ div.wicket-modal a.w_close:hover {
 
   /* more filter: https://codepen.io/sosuke/pen/Pjoqqp */
 }
+div.wicket-modal h3 {
+  margin:  0;
+  border-bottom: 0;
+  padding: 0;
+}
 
 /* ----------------------------------------------------------------------
 /* status bar
